@startuml

note as N1
  Composite パターンについて
  要素の集合を表現するオブジェクトと、その集合に含まれるそれぞれの要素を表現する
  オブジェクトを一様に扱えるようにする。
  <メリット>
  ・集団を構成するクラスと要素を構成するクラスを一様に扱える
  ・ツリー構造全体を同じ方法で扱うことができる
 end note

interface District {
  + getPopulation():int
}

class UnitDistrict {
  + getPopulation():int
  + setPopulation(popilation:int)
  - population
}

class GroupDistrict {
  + getPopulation():int
  + add(district: District)
}


District <|.. UnitDistrict
District <|.. GroupDistrict
District <--o GroupDistrict

@enduml